frontend/tests/cases/negative/wild.gr
import Prelude
import Vec

isEmpty : ∀ {n : Nat} . Vec n Int → Bool
isEmpty xs =
    case xs of
      Nil        → True;
      (Cons _ _) → False
